--- a/backend/package.json
+++ b/backend/package.json
@@ -14,5 +14,8 @@
     "express": "^4.21.1",
     "fluent-ffmpeg": "^2.1.3",
     "multer": "^1.4.5-lts.1"
+  },
+  "devDependencies": {
+    "cypress": "^13.15.0"
   }
 }
