--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,18 +3,18 @@ version: '3.8'
 services:
   web:
     build:
-      context: ./client.
+      context: ./frontend
       dockerfile: Dockerfile
     ports:
       - "80:80"
     deploy:
-      replicas: 1 
+      replicas: 1
 
   api:
     build:
-      context: ./server.
+      context: ./backend
       dockerfile: Dockerfile
     ports:
       - "3000:3000"
     deploy:
-      replicas: 5  
+      replicas: 5
