--- a/backend/package.json
+++ b/backend/package.json
@@ -10,9 +10,11 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "bull": "^4.16.3",
     "cors": "^2.8.5",
     "express": "^4.21.1",
     "fluent-ffmpeg": "^2.1.3",
+    "ioredis": "^5.4.1",
     "multer": "^1.4.5-lts.1"
   },
   "devDependencies": {
